fix: layout bugs

--- a/src/styles/eliestetica/blocks.scss
+++ b/src/styles/eliestetica/blocks.scss
@@ -9,6 +9,7 @@
 }
 
 .pill {
+  white-space: nowrap;
   position: relative;
   isolation: isolate;
   color: var(--text-color);
