--- a/src/styles/eliestetica/composition.scss
+++ b/src/styles/eliestetica/composition.scss
@@ -58,8 +58,11 @@
     &::before {
       content: "";
       position: absolute;
-      inset: -10rem;
+      left: 0;
       bottom: -2rem;
+      top: 0;
+      width: 100%;
+      min-width: 50rem;
       background-image: url("/eliestetica/bg_processo.svg");
       background-size: 100% 100%;
     }
