--- a/src/styles/eliestetica/typography.scss
+++ b/src/styles/eliestetica/typography.scss
@@ -32,13 +32,15 @@ h1 {
 }
 
 h2 {
+  --fluid-typography-min: 1.75rem;
+  --fluid-typography-max: 2rem;
+  font-size: 2rem;
   color: colors.$text;
   text-transform: uppercase;
   line-height: 1.6;
   margin-top: tokens.$space-7;
   margin-bottom: tokens.$space-5;
   font-weight: 600;
-  font-size: 2rem;
   hyphens: auto;
 }
 
