--- a/src/styles/eliestetica/utilities.scss
+++ b/src/styles/eliestetica/utilities.scss
@@ -155,3 +155,13 @@
   flex-wrap: wrap;
   gap: tokens.$space-5;
 }
+
+// --
+
+.fluid {
+  font-size: clamp(
+    var(--fluid-typography-min),
+    4vmin,
+    var(--fluid-typography-max)
+  );
+}
